fix(content-block): spacing adjustments (#9819)
Adjusting top and bottom border and without border spacing. Adjusted components all touching the content-block component. For some had to seperate out react/wc logic

**Changed**

- style update padding to margin

<!-- React and Web Component deploy previews are enabled by default. -->
<!-- To enable additional available deploy previews, apply the following -->
<!-- labels for the corresponding package: -->
<!-- *** "test: e2e": Codesandbox examples and e2e integration tests -->
<!-- *** "package: services": Services -->
<!-- *** "package: utilities": Utilities -->
<!-- *** "RTL": React / Web Components (RTL) -->
<!-- *** "feature flag": React / Web Components (experimental) -->

--- a/packages/styles/scss/components/callout-with-media/_callout-with-media.scss
+++ b/packages/styles/scss/components/callout-with-media/_callout-with-media.scss
@@ -81,11 +81,14 @@
     }
   }
 
-  :host(#{$c4d-prefix}-callout-with-media) .#{$prefix}--callout__content,
   .#{$prefix}--callout-with-media
     .#{$prefix}--callout__content
     .#{$prefix}--content-block {
-    padding-bottom: $spacing-10;
+    margin-bottom: $layout-05;
+  }
+
+  :host(#{$c4d-prefix}-callout-with-media) .#{$prefix}--callout__content {
+    padding-bottom: $layout-05;
   }
 
   :host(#{$c4d-prefix}-callout-with-media-image),
