--- a/packages/styles/scss/components/content-block-headlines/_content-block-headlines.scss
+++ b/packages/styles/scss/components/content-block-headlines/_content-block-headlines.scss
@@ -1,5 +1,5 @@
 /**
-* Copyright IBM Corp. 2016, 2021
+* Copyright IBM Corp. 2016, 2022
 *
 * This source code is licensed under the Apache-2.0 license found in the
 * LICENSE file in the root directory of this source tree.
@@ -20,12 +20,12 @@
   :host(#{$c4d-prefix}-content-block-headlines),
   .#{$prefix}--content-block-headlines {
     .#{$prefix}--content-block {
-      @include breakpoint(md) {
-        padding-top: $spacing-07;
+      @include breakpoint('md') {
+        margin-top: $carbon--spacing-07;
       }
 
-      @include breakpoint(lg) {
-        padding-top: $spacing-10;
+      @include breakpoint('lg') {
+        margin-top: $carbon--layout-05;
       }
     }
 
