--- a/packages/styles/scss/components/content-block-horizontal/_content-block-horizontal.scss
+++ b/packages/styles/scss/components/content-block-horizontal/_content-block-horizontal.scss
@@ -15,29 +15,23 @@
 @mixin content-block-horizontal {
   :host(#{$c4d-prefix}-content-block-horizontal),
   :host(#{$c4d-prefix}-content-group-horizontal) {
-    padding-top: $spacing-07;
-    padding-bottom: $spacing-07;
+    margin-top: $layout-03;
+    margin-bottom: $carbon--layout-03;
 
-    @include breakpoint(md) {
-      padding-bottom: $spacing-07;
+    @include carbon--breakpoint('md') {
+      margin-bottom: $layout-03;
     }
 
-    @include breakpoint(lg) {
-      padding-top: $spacing-10;
-      padding-bottom: $spacing-10;
+    @include carbon--breakpoint('lg') {
+      margin-top: $layout-05;
+      margin-bottom: $layout-05;
     }
   }
 
   .#{$prefix}--content-block-horizontal,
   .#{$prefix}--content-group-horizontal {
     .#{$prefix}--content-block {
-      padding-top: $spacing-07;
-      padding-bottom: $spacing-05;
-
-      @include breakpoint(lg) {
-        padding-top: $spacing-10;
-        padding-bottom: $spacing-09;
-      }
+      padding: 0;
     }
   }
   .#{$prefix}--content-group-horizontal {
