--- a/packages/styles/scss/components/logo-grid/_logo-grid.scss
+++ b/packages/styles/scss/components/logo-grid/_logo-grid.scss
@@ -164,6 +164,10 @@
     display: block;
   }
 
+  .#{$prefix}--content-layout__body {
+    display: block;
+  }
+
   .#{$prefix}--logo-grid__wrapper,
   .#{$prefix}--content-layout--logo-grid {
     width: 100%;
