--- a/packages/styles/scss/internal/content-block/_content-block.scss
+++ b/packages/styles/scss/internal/content-block/_content-block.scss
@@ -28,16 +28,19 @@
   :host(#{$c4d-prefix}-content-block-headlines),
   .#{$prefix}--content-block {
     display: block;
-    padding-top: $spacing-07;
-    padding-bottom: $spacing-10;
+    margin-top: $carbon--spacing-07;
+    margin-bottom: $carbon--spacing-12;
 
-    @include breakpoint(md) {
-      padding-top: $spacing-10;
-      padding-bottom: $spacing-12;
+    @include breakpoint('lg') {
+      margin-top: $carbon--spacing-10;
+      margin-bottom: $carbon--spacing-13;
     }
 
-    @include breakpoint(max) {
-      padding-bottom: $spacing-13;
+    &[complementary-style-scheme='with-border'] {
+      margin-bottom: $carbon--spacing-07;
+      @include breakpoint('lg') {
+        margin-bottom: $carbon--spacing-10;
+      }
     }
 
     .#{$prefix}--card__CTA {
@@ -76,6 +79,11 @@
       margin-right: 0;
       padding-left: 0;
       padding-right: 0;
+      padding-bottom: $carbon--spacing-10;
+
+      @include carbon--breakpoint('lg') {
+        padding-bottom: $carbon--spacing-12;
+      }
     }
 
     // Most slotted contents have margins aligning to Carbon grid gutters.
